src/objects/sf_devops__Environment__c.object
<CustomObject>
    <description>An environment represents a place where changes are made.</description>
    <fields>
        <fullName>sf_devops__Can_Track_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean flag to denote if this environment has been configured to track changes.  If this is true, then this environment can be associated with a work item.</description>
        <label>Can Track Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf_devops__Last_Revision_Counter__c</fullName>
        <description>This stores the last revision counter that was queried from the source members in the development environment that we represent.</description>
        <label>Last Revision Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf_devops__Named_Credential__c</fullName>
        <description>The DeveloperName value of the NamedCredential to use to connect to this environment.</description>
        <label>Named Credential</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Operation_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field references the AOR for the back sync operation.</description>
        <label>Operation Result</label>
        <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
        <relationshipLabel>Environments</relationshipLabel>
        <relationshipName>Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Project__c</fullName>
        <description>The Project this Environment is associated with.</description>
        <label>Project</label>
        <referenceTo>sf_devops__Project__c</referenceTo>
        <relationshipLabel>Environments</relationshipLabel>
        <relationshipName>Environments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sf_devops__Test_Environment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, this environment is on test instance, and auth should be performed at test.salesforce.com (not login.salesforce.com)</description>
        <label>Test Environment</label>
        <type>Checkbox</type>
    </fields>
    <label>Environment</label>
    <nameField>
        <label>Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sf_devops__Unique_Name</fullName>
        <active>true</active>
        <description>Enforces that all environments have a unique name</description>
        <errorConditionFormula>AND(
  OR(
    ISNEW(),
    ISCHANGED( Name )
  ),
  NOT(
    ISBLANK (
      VLOOKUP( $ObjectType.sf_devops__Environment__c.Fields.Name, 
               $ObjectType.sf_devops__Environment__c.Fields.Name,
               Name )
     )
  )
)</errorConditionFormula>
        <errorMessage>Environments require a unique name.</errorMessage>
    </validationRules>
</CustomObject>